// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover Trigger Element Renders trigger element and appends action props 1`] = `
<div
  class="sc-cJSrbW kloFzK"
>
  <button
    aria-label="Click to open popover with more information"
    class="sc-iwsKbI hnHAyb"
  >
    Trigger Button
  </button>
</div>
`;

exports[`Popover UI Positioning Bottom 1`] = `
<div
  aria-describedby="dialog-description-1"
  aria-label="Top PopOver"
  class="sc-TOsTZ czSdRR sc-bwzfXH laMShQ"
  data-placement="bottom"
  role="dialog"
  style="position: fixed; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0); will-change: transform;"
  width="400"
>
  <section
    class="sc-kgAjT WCmxm"
    tabindex="-1"
    width="400"
  >
    <div
      class="sc-bwzfXH dCpeWq"
      id="popover-description-1"
    >
      <div
        class="sc-bwzfXH dCpeWq"
      >
        <p>
          Hello there!
        </p>
        <button>
          Click me to close button!
        </button>
      </div>
    </div>
  </section>
  <span
    aria-hidden="true"
    class="sc-cHGsZl iyODlC"
    data-placement="bottom"
  />
</div>
`;

exports[`Popover UI Positioning Bottom End 1`] = `
<div
  aria-describedby="dialog-description-1"
  aria-label="Top PopOver"
  class="sc-TOsTZ czSdRR sc-bwzfXH laMShQ"
  data-placement="bottom-end"
  role="dialog"
  style="position: fixed; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0); will-change: transform;"
  width="400"
>
  <section
    class="sc-kgAjT WCmxm"
    tabindex="-1"
    width="400"
  >
    <div
      class="sc-bwzfXH dCpeWq"
      id="popover-description-1"
    >
      <div
        class="sc-bwzfXH dCpeWq"
      >
        <p>
          Hello there!
        </p>
        <button>
          Click me to close button!
        </button>
      </div>
    </div>
  </section>
  <span
    aria-hidden="true"
    class="sc-cHGsZl iyODlC"
    data-placement="bottom-end"
  />
</div>
`;

exports[`Popover UI Positioning Bottom Start 1`] = `
<div
  aria-describedby="dialog-description-1"
  aria-label="Top PopOver"
  class="sc-TOsTZ czSdRR sc-bwzfXH laMShQ"
  data-placement="bottom-start"
  role="dialog"
  style="position: fixed; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0); will-change: transform;"
  width="400"
>
  <section
    class="sc-kgAjT WCmxm"
    tabindex="-1"
    width="400"
  >
    <div
      class="sc-bwzfXH dCpeWq"
      id="popover-description-1"
    >
      <div
        class="sc-bwzfXH dCpeWq"
      >
        <p>
          Hello there!
        </p>
        <button>
          Click me to close button!
        </button>
      </div>
    </div>
  </section>
  <span
    aria-hidden="true"
    class="sc-cHGsZl iyODlC"
    data-placement="bottom-start"
  />
</div>
`;
